# spotify-shuffle

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  chatgpt-playlist.py  serve.py  spotify-shuffle.py
archive/: spotify-shuffle.py
src/: config.rs  main.rs  messages.rs  safety.rs  shuffle.rs  util.rs  worker.rs
src/ai/: anthropic.rs  claude_code.rs  mod.rs  prompts.rs
src/ops/: generate.rs  import_export.rs  insights.rs  mod.rs  organize.rs  playlist_tools.rs  refine.rs  resolve.rs
src/spotify/: auth.rs  client.rs  mod.rs  models.rs  service.rs
src/ui/: ai_studio.rs  insights_view.rs  library.rs  logview.rs  mod.rs  settings.rs  setup.rs  tools.rs
templates/: form.html
