[package]
name = "playlist-studio"
version = "0.1.0"
edition = "2024"
description = "AI-powered Spotify playlist studio with a strict two-tier playlist-safety model"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dirs = "6"
eframe = "0.35"
egui = "0.35"
egui_extras = "0.35"
open = "5"
rfd = "0.17"
rand = "0.9"
rand_chacha = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "net", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[profile.release]
lto = "thin"
